--- a/demo26/utilities/modals/wizards/create-project.html
+++ b/demo26/utilities/modals/wizards/create-project.html
@@ -16,7 +16,7 @@ License: For each use you must have a valid license purchased only from above li
 	<!--begin::Head-->
 	<head>
 <base href="../../../" />
-		<title>Metronic - The World's #1 Selling Bootstrap Admin Template - Metronic by KeenThemes</title>
+		<title>YVDMS - CREATE EVENT</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="The most advanced Bootstrap 5 Admin Theme with 40 unique prebuilt layouts on Themeforest trusted by 100,000 beginners and professionals. Multi-demo, Dark Mode, RTL support and complete React, Angular, Vue, Asp.Net Core, Rails, Spring, Blazor, Django, Express.js, Node.js, Flask, Symfony & Laravel versions. Grab your copy now and get life-time updates for free." />
 		<meta name="keywords" content="metronic, bootstrap, bootstrap 5, angular, VueJs, React, Asp.Net Core, Rails, Spring, Blazor, Django, Express.js, Node.js, Flask, Symfony & Laravel starter kits, admin themes, web design, figma, web development, free templates, free admin themes, bootstrap theme, bootstrap template, bootstrap dashboard, bootstrap dak mode, bootstrap button, bootstrap datepicker, bootstrap timepicker, fullcalendar, datatables, flaticon" />
@@ -4527,14 +4527,14 @@ License: For each use you must have a valid license purchased only from above li
 											<!--begin::Heading-->
 											<div class="card-px text-center pt-15 pb-15">
 												<!--begin::Title-->
-												<h2 class="fs-2x fw-bold mb-0">Create Project Modal Example</h2>
+												<h2 class="fs-2x fw-bold mb-0">Create New Event</h2>
 												<!--end::Title-->
 												<!--begin::Description-->
-												<p class="text-gray-500 fs-4 fw-semibold py-7">Click on the below buttons to launch 
-												<br />n extended project creation flow example.</p>
+												<p class="text-gray-500 fs-4 fw-semibold py-7">Click on the below buttons to create 
+												<br />new event.</p>
 												<!--end::Description-->
 												<!--begin::Action-->
-												<a href="#" class="btn btn-primary er fs-6 px-8 py-4" data-bs-toggle="modal" data-bs-target="#kt_modal_create_project">Create Project</a>
+												<a href="#" class="btn btn-primary er fs-6 px-8 py-4" data-bs-toggle="modal" data-bs-target="#kt_modal_create_project">Create Event</a>
 												<!--end::Action-->
 											</div>
 											<!--end::Heading-->
@@ -6338,7 +6338,7 @@ License: For each use you must have a valid license purchased only from above li
 					<!--begin::Modal header-->
 					<div class="modal-header py-7 d-flex justify-content-between">
 						<!--begin::Modal title-->
-						<h2>Create Campaign</h2>
+						<h2>Create Event</h2>
 						<!--end::Modal title-->
 						<!--begin::Close-->
 						<div class="btn btn-sm btn-icon btn-active-color-primary" data-bs-dismiss="modal">
@@ -7072,7 +7072,7 @@ License: For each use you must have a valid license purchased only from above li
 					<!--begin::Modal header-->
 					<div class="modal-header">
 						<!--begin::Modal title-->
-						<h2>Create Project</h2>
+						<h2>Create Event</h2>
 						<!--end::Modal title-->
 						<!--begin::Close-->
 						<div class="btn btn-sm btn-icon btn-active-color-primary" data-bs-dismiss="modal">
@@ -7094,12 +7094,12 @@ License: For each use you must have a valid license purchased only from above li
 								<div class="stepper-nav justify-content-center py-2">
 									<!--begin::Step 1-->
 									<div class="stepper-item me-5 me-md-15 current" data-kt-stepper-element="nav">
-										<h3 class="stepper-title">Project Type</h3>
+										<h3 class="stepper-title">Event Type</h3>
 									</div>
 									<!--end::Step 1-->
 									<!--begin::Step 2-->
 									<div class="stepper-item me-5 me-md-15" data-kt-stepper-element="nav">
-										<h3 class="stepper-title">Project Settings</h3>
+										<h3 class="stepper-title">Event Settings</h3>
 									</div>
 									<!--end::Step 2-->
 									<!--begin::Step 3-->
@@ -7164,7 +7164,7 @@ License: For each use you must have a valid license purchased only from above li
 														<!--end::Icon-->
 														<!--begin::Info-->
 														<span class="ms-4">
-															<span class="fs-3 fw-bold text-gray-900 mb-2 d-block">Personal Project</span>
+															<span class="fs-3 fw-bold text-gray-900 mb-2 d-block">Individual Event</span>
 															<span class="fw-semibold fs-4 text-muted">If you need more info, please check it out</span>
 														</span>
 														<!--end::Info-->
@@ -7187,7 +7187,7 @@ License: For each use you must have a valid license purchased only from above li
 														<!--end::Icon-->
 														<!--begin::Info-->
 														<span class="ms-4">
-															<span class="fs-3 fw-bold text-gray-900 mb-2 d-block">Team Project</span>
+															<span class="fs-3 fw-bold text-gray-900 mb-2 d-block">Team Event</span>
 															<span class="fw-semibold fs-4 text-muted">Create corporate account to manage users</span>
 														</span>
 														<!--end::Info-->
@@ -7200,7 +7200,7 @@ License: For each use you must have a valid license purchased only from above li
 											<!--begin::Actions-->
 											<div class="d-flex justify-content-end">
 												<button type="button" class="btn btn-lg btn-primary" data-kt-element="type-next">
-													<span class="indicator-label">Project Settings</span>
+													<span class="indicator-label">Event Settings</span>
 													<span class="indicator-progress">Please wait... 
 													<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
 												</button>
@@ -7251,13 +7251,13 @@ License: For each use you must have a valid license purchased only from above li
 											<!--begin::Input group-->
 											<div class="fv-row mb-8">
 												<!--begin::Label-->
-												<label class="required fs-6 fw-semibold mb-2">Customer</label>
+												<label class="required fs-6 fw-semibold mb-2">Clients/Partners</label>
 												<!--end::Label-->
 												<!--begin::Input-->
 												<select class="form-select form-select-solid" data-control="select2" data-hide-search="true" data-placeholder="Select..." name="settings_customer">
 													<option></option>
-													<option value="1">Keenthemes</option>
-													<option value="2">CRM App</option>
+													<option value="1">Take from the db</option>
+													<option value="2">Not necessary to have it</option>
 												</select>
 												<!--end::Input-->
 											</div>
@@ -7266,7 +7266,7 @@ License: For each use you must have a valid license purchased only from above li
 											<div class="fv-row mb-8">
 												<!--begin::Label-->
 												<label class="d-flex align-items-center fs-6 fw-semibold form-label mb-2">
-													<span class="required">Project Name</span>
+													<span class="required">Event Name</span>
 													<span class="ms-1" data-bs-toggle="tooltip" title="Specify project name">
 														<i class="ki-duotone ki-information-5 text-gray-500 fs-6">
 															<span class="path1"></span>
@@ -7284,7 +7284,7 @@ License: For each use you must have a valid license purchased only from above li
 											<!--begin::Input group-->
 											<div class="fv-row mb-8">
 												<!--begin::Label-->
-												<label class="required fs-6 fw-semibold mb-2">Project Description</label>
+												<label class="required fs-6 fw-semibold mb-2">Event Description</label>
 												<!--end::Label-->
 												<!--begin::Input-->
 												<textarea class="form-control form-control-solid" rows="3" placeholder="Enter Project Description" name="settings_description">Experience share market at your fingertips with TICK PRO stock investment mobile trading app</textarea>
