--- a/demo26/utilities/modals/wizards/create-project.html
+++ b/demo26/utilities/modals/wizards/create-project.html
@@ -3793,7 +3793,7 @@ License: For each use you must have a valid license purchased only from above li
 										<!--begin::Page title-->
 										<div class="page-title d-flex flex-column justify-content-center me-3">
 											<!--begin::Title-->
-											<h1 class="page-heading d-flex title-custom fw-bolder fs-2hx flex-column justify-content-center my-0">Create Project</h1>
+											<h1 class="page-heading d-flex title-custom fw-bolder fs-2hx flex-column justify-content-center my-0">Create Event</h1>
 											<!--end::Title-->
 											<!--begin::Breadcrumb-->
 											<ul class="breadcrumb breadcrumb-separatorless fw-semibold fs-7 my-0 pt-1">
@@ -4054,7 +4054,7 @@ License: For each use you must have a valid license purchased only from above li
 																</a>
 																<!--end::Item-->
 																<!--begin::Category title-->
-																<h3 class="fs-5 text-muted m-0 pt-5 pb-5" data-kt-search-element="category-title">Projects</h3>
+																<h3 class="fs-5 text-muted m-0 pt-5 pb-5" data-kt-search-element="category-title">Event</h3>
 																<!--end::Category title-->
 																<!--begin::Item-->
 																<a href="#" class="d-flex text-gray-900 text-hover-primary align-items-center mb-5">
@@ -4377,7 +4377,7 @@ License: For each use you must have a valid license purchased only from above li
 																<!--begin::Option-->
 																<label>
 																	<input type="radio" class="btn-check" name="type" value="projects" />
-																	<span class="btn btn-sm btn-color-muted btn-active btn-active-primary px-4">Projects</span>
+																	<span class="btn btn-sm btn-color-muted btn-active btn-active-primary px-4">Event</span>
 																</label>
 																<!--end::Option-->
 															</div>
@@ -4459,7 +4459,7 @@ License: For each use you must have a valid license purchased only from above li
 														<!--begin::Input group-->
 														<div class="pb-4 border-bottom">
 															<label class="form-check form-switch form-switch-sm form-check-custom form-check-solid flex-stack">
-																<span class="form-check-label text-gray-700 fs-6 fw-semibold ms-0 me-2">Projects</span>
+																<span class="form-check-label text-gray-700 fs-6 fw-semibold ms-0 me-2">Event</span>
 																<input class="form-check-input" type="checkbox" value="1" checked="checked" />
 															</label>
 														</div>
@@ -7138,7 +7138,7 @@ License: For each use you must have a valid license purchased only from above li
 											<!--begin::Heading-->
 											<div class="pb-7 pb-lg-12">
 												<!--begin::Title-->
-												<h1 class="fw-bold text-gray-900">Project Type</h1>
+												<h1 class="fw-bold text-gray-900">Event Type</h1>
 												<!--end::Title-->
 												<!--begin::Description-->
 												<div class="text-muted fw-semibold fs-4">If you need more info, please check out 
@@ -7217,7 +7217,7 @@ License: For each use you must have a valid license purchased only from above li
 											<!--begin::Heading-->
 											<div class="pb-12">
 												<!--begin::Title-->
-												<h1 class="fw-bold text-gray-900">Project Settings</h1>
+												<h1 class="fw-bold text-gray-900">Event Settings</h1>
 												<!--end::Title-->
 												<!--begin::Description-->
 												<div class="text-muted fw-semibold fs-4">If you need more info, please check 
@@ -7355,7 +7355,7 @@ License: For each use you must have a valid license purchased only from above li
 											<!--end::Input group-->
 											<!--begin::Actions-->
 											<div class="d-flex flex-stack">
-												<button type="button" class="btn btn-lg btn-light me-3" data-kt-element="settings-previous">Project Type</button>
+												<button type="button" class="btn btn-lg btn-light me-3" data-kt-element="settings-previous">Event Type</button>
 												<button type="button" class="btn btn-lg btn-primary" data-kt-element="settings-next">
 													<span class="indicator-label">Budget</span>
 													<span class="indicator-progress">Please wait... 
