--- a/demo26/utilities/modals/wizards/create-project.html
+++ b/demo26/utilities/modals/wizards/create-project.html
@@ -1384,7 +1384,7 @@ License: For each use you must have a valid license purchased only from above li
 																			<div class="menu-item p-0 m-0">
 																				<!--begin:Menu link-->
 																				<a href="utilities/modals/wizards/create-project.html" class="menu-link active">
-																					<span class="menu-title">Create Project</span>
+																					<span class="menu-title">Create Event</span>
 																				</a>
 																				<!--end:Menu link-->
 																			</div>
@@ -7104,29 +7104,19 @@ License: For each use you must have a valid license purchased only from above li
 									<!--end::Step 2-->
 									<!--begin::Step 3-->
 									<div class="stepper-item me-5 me-md-15" data-kt-stepper-element="nav">
-										<h3 class="stepper-title">Budget</h3>
+										<h3 class="stepper-title">Registration</h3>
 									</div>
 									<!--end::Step 3-->
 									<!--begin::Step 4-->
 									<div class="stepper-item me-5 me-md-15" data-kt-stepper-element="nav">
-										<h3 class="stepper-title">Build A Team</h3>
+										<h3 class="stepper-title">Feedback</h3>
 									</div>
 									<!--end::Step 4-->
 									<!--begin::Step 5-->
 									<div class="stepper-item me-5 me-md-15" data-kt-stepper-element="nav">
-										<h3 class="stepper-title">Set First Target</h3>
-									</div>
-									<!--end::Step 5-->
-									<!--begin::Step 6-->
-									<div class="stepper-item me-5 me-md-15" data-kt-stepper-element="nav">
-										<h3 class="stepper-title">Upload Files</h3>
-									</div>
-									<!--end::Step 6-->
-									<!--begin::Step 7-->
-									<div class="stepper-item" data-kt-stepper-element="nav">
 										<h3 class="stepper-title">Completed</h3>
 									</div>
-									<!--end::Step 7-->
+									<!--end::Step 5-->
 								</div>
 								<!--end::Nav-->
 								<!--begin::Form-->
@@ -7378,7 +7368,7 @@ License: For each use you must have a valid license purchased only from above li
 											<div class="d-flex flex-stack">
 												<button type="button" class="btn btn-lg btn-light me-3" data-kt-element="settings-previous">Event Type</button>
 												<button type="button" class="btn btn-lg btn-primary" data-kt-element="settings-next">
-													<span class="indicator-label">Budget</span>
+													<span class="indicator-label">Registration</span>
 													<span class="indicator-progress">Please wait... 
 													<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
 												</button>
